# aNLP_Final_Project

./: GPT2_SAE_STEERING.ipynb  README.md  basic_activation.ipynb  evaluation.ipynb  pyproject.toml  requirements.txt  run_experiments.py
results/: EVAL_LOVE_HATE_ablation_20260112_152928.csv  EVAL_LOVE_HATE_basic_20260112_152928.csv  EVAL_LOVE_HATE_sae_20260112_152928.csv  steering_comparison_20260112_162949.json  steering_comparison_20260112_171236.json  steering_comparison_20260113_134626.json  steering_comparison_20260113_152210.json  steering_comparison_20260113_160142.json  steering_comparison_20260113_173121.json
src/: __init__.py  config.py  data.py  evaluation.py  models.py  steering.py  visualization.py
